@@ -18,7 +18,7 @@
   </property>
   <property name="javadocdir" value="dist/docs/api">
   </property>
-  <property name="final.name" value="grand-0.3.1-pre">
+  <property name="final.name" value="grand-0.3.1">
   </property>
   <target name="init" description="o Initializes some properties">
     <mkdir dir="${libdir}">
